# cython-test-exception-raiser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: github-deploy.yml
