[metadata]
name = twisted-raiser
version = 0.0.0.a3
description = A trivial extension that just raises an exception.
long_description = file: README.rst
author = Twisted Matrix Laboratories
author_email = twisted-python@twistedmatrix.com
maintainer = Thomas Grainger
maintainer_email = twisted-raiser@graingert.co.uk
url = https://github.com/graingert/twisted-raiser
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

[zest.releaser]
tag-format = v{version}
